--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: ruby
 rvm:
-  - 2.3.1
-  - 2.2.4
+  - 2.6
+  - 2.5
+  - 2.4
+  - 2.3
+  - 2.2
+  - ruby-head
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+script: bundle exec rspec
