--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ rvm:
   - 2.5
   - 2.4
   - 2.3
-  - 2.2
   - ruby-head
 matrix:
   allow_failures:
     - rvm: ruby-head
 script: bundle exec rspec
+before_install:
+    - gem update --system
+    - gem install bundler
